# CodeMemo

./: .gitignore  kinect_question.txt  thread_demo  快捷键.md  数据操作.md  编辑器使用.md
bash/: bash_basic.sh  compile_link.html  compile_link.md  debug_compile_link.md  eval-batch.slurm  eval-command.sh  file_op.sh  git_op.sh  gpu.md  log.sh  software_use.sh  txt_op.sh  vim.md  vim.sh  安装软件.md  常见问题.md  概念.md
cmake-demo/: CMakeLists.txt  MathFucntion.cpp  TutorialConfig.h.in  main.cpp
cmake-demo/C++/: 关键字.md  智能指针.md
cmake-demo/Log/: CMakeLists.txt  Log.cpp
css/: ReadMe.md  定位_position.html  盒模型.html
interview/: NLP  NLP.md  basic_code.py  大数据处理问题.md  工程_分类问题.md  工程问题.md  机器学习问题.md  深度学习问题.md  程序题.md
java/: basic.md
js/: basic.html  basic.js  动态生成表格.html
js/node/: install.md
optimization/: links.md
python/: basic.py  config.py  jupyter.md  mysort.py  numpy.md  pandas.py  pandas_matlib.md  pandas_matlib_sns_sklearn.md  profiler.py  sklearn.md  technique.py  tf.py  thread_demo.py  use_struct.py  utils.py  woo.py  概念.md
python/algo/: EM.py  KL_JS_divergence.py  Mat_EuclideanDistances.py  Mat_HMM_Viterbi.py  WPidection.py  bit_st_lca.py  filter.py  lsh.py  mytree.py  permute_subset.py  quantization_kmeans.py  rotate.py
python/algo/conventional/: Ngram.py  greedy_beam.py  lru.py  mydp.py  mysearch.py
python/basic/: arg_parse.py  basic.py  copy.py  dict2obj2json.py  file_op.py  hadoop_util.py  use_config.py  use_matlibplot.py  use_shell.py
python/basic/test_module/: aa.py
python/basic/test_module/sub1/: a.py  case_3_1.py  case_3_2.py
python/basic/test_module/sub1/subsub/: a.py
python/crawl_juku/: chnWordSegVocab  entrypoint.py  init_sql.py  log_init.py  scrapy.cfg  test_html_extract.py  爬虫.md
python/crawl_juku/crawl_juku/: items.py  middlewares.py  pipelines.py  rotate_useragent.py  settings.py  sql.py
python/crawl_juku/crawl_juku/spiders/: juku.py
python/crawl_juku/tools/: get_pic.py  taobao_comment.py
python/deep/: NLP.md  debug.md  debug.py  fairseq_gen.py  quantization_kmeans.py  tensor_op.py  tensor操作.py  tf.py  transformers.py  概念理解.md  真实场景.md
python/segment/: ensemble_demo.py  eval_precision_recall.py  log_demo.py  log_init_test.py  mlog.py  nlp_preprocess.py  noise_data.py  parseWikiXML.py  stack_get_oof.py
python/segment/Deprecated/: llog.py  log_init.py
python/test_module/sub1/: case_1.py  case_2.py  case_4.py
python/test_module/sub2/: aa.py
resources/: data_aug.md  latex.md  paper_follow.md  工作方法.md  真实场景.md
second_folder/cmake-demo/: CMakeLists.txt  MathFucntion.h  TutorialConfig.h.in
second_folder/cmake-demo/C++/: 关键字.md  常见错误.md  智能指针.md
second_folder/cmake-demo/Log/: CMakeLists.txt  Log.hpp
second_folder/css/: ReadMe.md  定位_position.html  布局_inline-block.html
second_folder/java/: basic.md
second_folder/js/: basic.html  config.js  动态生成表格.html
second_folder/js/node/: install.md
software_usage/: chrome.md  excel.md
software_usage/mac/: settings.txt
